--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,7 @@
 
     <fragment
         android:id="@+id/main_fragment"
-        android:name="com.sonerik.neuralnetworksandroid.fragments.MainFragment"
+        android:name="com.sonerik.neuralnetworksandroid.fragments.InputFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:layout="@layout/fragment_main" />
