--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.sonerik.neuralnetworksandroid.fragments.MainFragment">
+    tools:context="com.sonerik.neuralnetworksandroid.fragments.InputFragment">
 
     <Button
         android:id="@+id/loadFromCsv"
