--- a/app/src/main/res/layout/fragment_input.xml
+++ b/app/src/main/res/layout/fragment_input.xml
@@ -22,6 +22,7 @@
         app:button_colorPressed="?colorPrimaryDark"
         app:image="@drawable/ic_learn"
         app:image_size="24dp"
+        app:show_animation="@anim/fab_scale_up"
         />
 
 </RelativeLayout>
