--- a/app/src/main/res/layout/fragment_table.xml
+++ b/app/src/main/res/layout/fragment_table.xml
@@ -8,7 +8,7 @@
     <include layout="@layout/item_table"
         android:id="@+id/tableTitles"
         android:layout_width="match_parent"
-        android:layout_height="48dp"
+        android:layout_height="@dimen/table_item_height"
         />
 
     <android.support.v7.widget.RecyclerView
