--- a/app/src/main/res/layout/fragment_input.xml
+++ b/app/src/main/res/layout/fragment_input.xml
@@ -1,12 +1,12 @@
-<com.dd.ShadowLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_margin="16dp"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    app:sl_dy="2dp"
-    app:sl_shadowColor="#AA000000"
-    app:sl_cornerRadius="2dp">
+<!--<com.dd.ShadowLayout-->
+    <!--xmlns:android="http://schemas.android.com/apk/res/android"-->
+    <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
+    <!--android:layout_margin="16dp"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="match_parent"-->
+    <!--app:sl_dy="2dp"-->
+    <!--app:sl_shadowColor="#AA000000"-->
+    <!--app:sl_cornerRadius="2dp">-->
 
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
@@ -37,4 +37,4 @@
 
     </RelativeLayout>
 
-</com.dd.ShadowLayout>
+<!--</com.dd.ShadowLayout>-->
