--- a/app/src/main/res/layout/fragment_learning_progress.xml
+++ b/app/src/main/res/layout/fragment_learning_progress.xml
@@ -16,7 +16,7 @@
         android:layout_height="300dp">
 
         <TextView
-            android:text="Epochs passed"
+            android:text="Learning..."
             android:textSize="18sp"
             android:textStyle="bold"
             android:textAllCaps="true"
@@ -24,36 +24,50 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
-        <TextView
-            android:id="@+id/txt_epochs_passed"
-            tools:text="500"
-            android:textSize="24sp"
-            android:textColor="@color/md_grey_50"
-            android:layout_gravity="center"
-            android:gravity="center"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+        <!--<TextView-->
+            <!--android:text="Epochs passed"-->
+            <!--android:textSize="18sp"-->
+            <!--android:textStyle="bold"-->
+            <!--android:textAllCaps="true"-->
+            <!--android:textColor="@color/md_grey_200"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content" />-->
 
-        <TextView
-            android:text="Average error"
-            android:layout_marginTop="16dp"
-            android:textSize="18sp"
-            android:textAllCaps="true"
-            android:textStyle="bold"
-            android:textColor="@color/md_grey_200"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+        <!--<TextView-->
+            <!--android:id="@+id/txt_epochs_passed"-->
+            <!--tools:text="500"-->
+            <!--android:textSize="24sp"-->
+            <!--android:textColor="@color/md_grey_50"-->
+            <!--android:layout_gravity="center"-->
+            <!--android:gravity="center"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content" />-->
 
-        <TextView
-            android:id="@+id/txt_average_error"
-            tools:text="0.001342432151253221"
-            android:textColor="@color/md_grey_50"
-            android:textSize="24sp"
-            android:layout_gravity="center"
-            android:gravity="center"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+        <!--<TextView-->
+            <!--android:text="Average error"-->
+            <!--android:layout_marginTop="16dp"-->
+            <!--android:textSize="18sp"-->
+            <!--android:textAllCaps="true"-->
+            <!--android:textStyle="bold"-->
+            <!--android:textColor="@color/md_grey_200"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content" />-->
+
+        <!--<TextView-->
+            <!--android:id="@+id/txt_average_error"-->
+            <!--tools:text="0.001342432151253221"-->
+            <!--android:textColor="@color/md_grey_50"-->
+            <!--android:textSize="24sp"-->
+            <!--android:layout_gravity="center"-->
+            <!--android:gravity="center"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content" />-->
 
     </LinearLayout>
+
+    <ProgressBar
+        android:layout_centerInParent="true"
+        android:layout_width="360dp"
+        android:layout_height="360dp" />
 
 </RelativeLayout>
